# Multi-agent-RAG-Platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
alembic/: env.py
k8s/: deployment.yaml
monitoring/: prometheus.yml
scripts/: deploy.sh  setup.sh
src/: main.py
src/api/: middleware.py
src/api/routes/: admin.py  agents.py  auth.py  documents.py  query.py
src/config/: settings.py
src/core/: auth.py  exceptions.py  logging.py  security.py
src/database/: __init__.py  engine.py  session.py
src/models/: __init__.py  agent.py  base.py  document.py  query.py  user.py
src/schemas/: __init__.py  agent.py  auth.py  common.py  document.py  query.py
src/services/: __init__.py  agent.py  document.py  llm.py  query.py  vector_store.py
terraform/: main.tf
tests/: conftest.py  test_auth.py
